[gd_scene load_steps=3 format=3 uid="uid://bu3r5cdxp4ykm"]

[ext_resource type="Script" path="res://Scenes/title_screen.gd" id="1_1rtc7"]
[ext_resource type="Texture2D" uid="uid://dqlleqxco1j47" path="res://Assets/Background.png" id="2_qu04b"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rtc7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qu04b")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="lblTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME_TITLE GAME_TITLE GAME_TITLE"

[node name="btnPlay" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="btnAbout" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "About"

[node name="btnQuit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/btnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btnAbout" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
